--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
                            <div class="collapse navbar-collapse" id="navbarsExample04">
                               <ul class="navbar-nav mr-auto">
                                  <li class="nav-item active">
-                                    <a class="nav-link" href="about.html">BASE DE DATOS</a>
+                                    <a class="nav-link" href="">BASE DE DATOS</a>
                                  </li> 
                                  <li class="nav-item">
-                                    <a class="nav-link" href="clients.html">EQUIPOS</a>
+                                    <a class="nav-link" href="">EQUIPOS</a>
                                  </li>
                                  <li class="nav-item">
-                                    <a class="nav-link" href="ourwork.html">MANUALES</a>
+                                    <a class="nav-link" href="">MANUALES</a>
                                  </li>
                                  <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">GENERADOR DE CODIGOS</a>
+                                    <a class="nav-link" href="gen_qr.html">GENERADOR DE CODIGOS</a>
                                  </li>
                               </ul>
                               <div>
