--- a/m_w22.html
+++ b/m_w22.html
@@ -54,7 +54,7 @@
                                     <a class="nav-link" href="ourwork.html">MANUALES</a>
                                  </li>
                                  <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">GENERADOR DE CODIGOS</a>
+                                    <a class="nav-link" href="gen_qr.html">GENERADOR DE CODIGOS</a>
                                  </li>
                               </ul>
                               <div>
@@ -69,21 +69,9 @@
          </div>
       </header>
 
-      <div>
+      <div class="col-sm-12" style="position: relative;right: 550px; top: 30px;">
         <a><img src="images/W22.jpg" width="500" height="250" style="float: right;"/></a>
       </div>
-
-      <div class="col-sm-12" style="position: absolute; left: 1470px; top: 550px;"><td><a><button onclick="popup()" class="submit">VIDEO</button></a></td></div>
-
-      <h3></h3> 
-      <h3></h3>
-
-      <div class="col-sm-12" style="position: absolute; left: 1470px; top: 650px;"><td><a href="files/motor w22.pdf" target="_blank"><button class="submit">ACERCA DE</button></a></td></div>
-
-      <h3></h3> 
-      <h3></h3>
-
-      <div class="col-sm-12" style="position: absolute; left: 1470px; top: 750px;"><td><a href="files/w22_winddings.pdf" target="_blank"><button class="submit">MAS</button></a></td></div>
 
       <div class="col-md-6">
         <div class="row">
@@ -111,7 +99,7 @@
                <li>7</li>
             </ul>
            </div>
-        </div>
+         </div>
       </div>
 
       <div class="col-md-6">
@@ -145,22 +133,29 @@
                <li>XXXXXXXXXXXXXXXXXXXXXX</li>
             </ul>
            </div>
+           <div class="col-md-5 offset-md-1 padding_bottom1">
+            <ul class="cont">
+               <div class="col-sm-12"><td><a><button onclick="popup()" class="submit">VIDEO</button></a></td></div>
+            </ul>
+            </div>
+            <div class="col-md-5 offset-md-1 padding_bottom1">
+               <ul class="cont">
+                  <div class="col-sm-12"><td><a href="files/motor w22.pdf" target="_blank"><button class="submit">ACERCA DE</button></a></td></div>
+               </ul>
+            </div>
+            <div class="col-md-5 offset-md-11 padding_bottom1">
+               <ul class="cont">
+                  <div class="col-sm-12"><td><a href="files/w22_winddings.pdf" target="_blank"><button class="submit">MAS</button></a></td></div>
+               </ul>
+            </div>
         </div>
       </div>
 
       <h3></h3> 
       <h3></h3>
 
-      
       <a style="position: relative; left: 70px;"><img src="images/ficha.PNG" width="1200" height="1500"/></a>
       
-  
-      <!--<div>
-        <video width="720" height="480" controls >
-            <source src="videos/motor.mp4" type="video/mp4">
-        </video>
-      </div>-->
-
       <div class="copyright">
          <div class="container">
             <div class="row">
